--- a/index.html
+++ b/index.html
@@ -1,14 +1,152 @@
-<!DOCTYPE html>
-<html>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de">
 <head>
-<title>Bootstrap 101 Template</title>
-<meta name="viewport" content="width =device-width,initial-scale=1.0">
-<!--Bootstrap-->
-<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+<title>IBS DSA</title>
+
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+<meta name="description" content="IBS-Homepage"/>
+<meta name="author" content="Ibrahim Baydag"/>
+<meta name="keywords" content="DSA Das Schwarze Auge"/>
+
 </head>
+
 <body>
-	<h1>Hello , world !</h1>
-	<script src="http://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+
+	<h1>Das Schwarze Auge</h1>
+
+	<h2>Spielmechanismus</h2>
+
+	<p>
+		Das Spiel ist ein klassisches Pen-&amp;-Paper-Rollenspiel und wurde
+		seit der ersten Ausgabe 1984 stark ver&auml;ndert. Aktuell ist die
+		Hardcoverausgabe der 4. Edition, welche inoffiziell aufgrund der
+		&Auml;nderungen im Vergleich zur Erstauflage dieser Edition als 4.1
+		bezeichnet wird. Ihr Regelwerk ist sehr <em>komplex</em>.
+	</p>
+
+	<p>
+		Die Spielercharaktere werden zufallsunabh&auml;ngig nach einem
+		Punktesystem generiert, wobei es Spielrassen, Kulturen, Berufe und
+		Vor- und Nachteile gibt. Starre Charakterklassen existieren nicht
+		mehr; die Charaktererschaffung &auml;hnelt in vielen Elementen dem
+		Rollenspiel-System <acronym
+			title="Generic Universal Role Playing System">GURPS</acronym>.
+		Erfolgsproben werden mit dem zwanzigseitigen W&uuml;rfel abgelegt,
+		wobei im Regelfall 1 das beste und 20 das schlechteste Ergebnis ist.
+		Die Eigenschaften sind Mut, Klugheit, Intuition, Charisma,
+		Fingerfertigkeit, Gewandtheit, Konstitution und K&ouml;rperkraft.
+		Diese können Werte von 1 bis über 21 haben und liegen bei neu
+		erschaffenen Helden in der Regel zwischen 8 und 14.
+	</p>
+
+	<p>Verfeinert wird die Spielmechanik durch Talente (z. B.
+		Schleichen oder Menschenkenntnis), die der Spielfigur eine besondere
+		Ausrichtung geben. Eine Talentprobe setzt sich aus drei
+		Eigenschaftsproben zusammen, so dass stets drei W&uuml;rfe
+		erforderlich sind. Die Talentf&auml;higkeit kann zum Ausgleich
+		&uuml;berw&uuml;rfelter Ergebnisse verwendet werden oder wird – bei
+		negativen Talentwerten – als Malus auf alle Einzelproben gewertet.</p>
+
+	<p>Das Kampfsystem baut auf Attacken und Paraden auf. Gelingt es,
+		einen Gegner anzugreifen, hat dieser die Chance, mit einem Paradewurf
+		den Treffer zu vereiteln. Erg&auml;nzt wird dies durch sog.
+		Kampfman&ouml;ver, welche es zum Beispiel durch eine selbst auferlegte
+		Erschwernis auf die Attacke erm&ouml;glichen, den Schaden zu
+		verst&auml;rken oder die Abwehr des Gegners zu schw&auml;chen. Noch
+		komplexere Man&uuml;ver machen K&auml;mpfe interessanter und
+		spannender. Das Magiesystem basiert auf einzeln festgelegten Sprüchen,
+		die wie Talente gehandhabt werden. Über die Astralenergie werden die
+		F&auml;higkeiten von Zauberern begrenzt.</p>
+
+	<p>Wie in vielen anderen Rollenspielen auch erhalten Charaktere
+		Erfahrungspunkte, mit denen die Werte verbessert werden können. Es
+		gibt verschiedene Kriterien, um diese Punkte zu bestimmen; dazu
+		z&auml;hlen beispielsweise das Erreichen von Zielen, Erfolg im Kampf
+		oder das L&ouml;sen von R&auml;tseln.</p>
+
+	<h3>Was braucht man um DSA zu spielen?</h3>
+
+	<!-- Ungeordnete Liste für DSA Zubehör -->
+	<ul>
+		<li>W&uuml;rfel (mindestens 3 mal <acronym
+			title="W&uuml;rfel mit 6 Seiten">W6-W&uuml;rfel</acronym>, mindestens
+			3 mal <acronym title="W&uuml;rfel mit 20 Seiten">W20-W&uuml;rfel</acronym>
+		</li>
+		<li>Charakterblatt</li>
+		<li>Mindestens 2 Personen (1 Spielleiter und 1 Spieler)</li>
+		<li>Regelwerk (Oder Google)</li>
+		<li>Spielfiguren</li>
+	</ul>
+
+
+	<h3>W&uuml;rfel im Rollenspiel</h3>
+
+	<p>Neben Papier und Bleistift sind Rollenspielw&uuml;rfel bei
+		unserem Rollenspielsystem unentbehrlich. Meistens werden sie
+		daf&uuml;r genutzt, um zu entscheiden, ob eine Spieleraktion gelungen
+		oder misslungen ist. Und der Spielleiter kann per W&uuml;rfelwurf die
+		Wetterlage bestimmen, auf wie viele Feinde die Helden treffen und wie
+		viel Gold sie erbeuten können. Die W&uuml;rfel sind also Freund und
+		Feind des Rollenspielers zugleich. Von vielen werden sie daher auch
+		ein bisschen wie Kultgegenst&auml;nde behandelt. Darum gibt es sie
+		auch in vielen verschiedenen Gr&ouml;&szlig;en, Formen und Farben.</p>
+
+	<h3>Arten von W&uuml;rfeln im Rollenspiel</h3>
+
+	<!-- Geordnete Liste -->
+	<ol>
+		<li><acronym title="W&uuml;rfel mit 4 Seiten">Der
+				W4-W&uuml;rfel</acronym></li>
+		<li><acronym title="W&uuml;rfel mit 6 Seiten">Der
+				W6-W&uuml;rfel</acronym></li>
+		<li><acronym title="W&uuml;rfel mit 10 Seiten">Der
+				W10-W&uuml;rfel</acronym></li>
+		<li><acronym title="W&uuml;rfel mit 20 Seiten">Der
+				W20-W&uuml;rfel</acronym></li>
+	</ol>
+
+
+
+
+	<h3>Beispiel f&uuml;r eine Anwendung eines W&uuml;rfels</h3>
+
+	<p>Angenommen der Spieleleiter m&ouml;chte das Wetter bestimmen. Er
+		w&uuml;rfelt mit einem W6 und liest von der Tabelle ab.</p>
+
+	<!-- Tabelle -->
+	<table>
+		<tr>
+			<th>Augenzahl des W&uuml;rfels</th>
+			<th>Ereignis</th>
+		</tr>
+		<tr>
+			<td>1 - 2</td>
+			<td>Regen</td>
+		</tr>
+		<tr>
+			<td>3 - 4</td>
+			<td>Sonnenschein</td>
+		</tr>
+		<tr>
+			<td>5</td>
+			<td>Nebel</td>
+		</tr>
+		<tr>
+			<td>6</td>
+			<td>Starker Regen</td>
+		</tr>
+	</table>
+
+	
+	<p>Quelle: DSA Wikipedia</p>
+
+
+	<address>Technische Hochschule Mittelhessen</address>
+	<p>
+		<a href="http://validator.w3.org/check?uri=referer"><img
+			src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1"
+			height="31" width="88"/></a>
+	</p>
 </body>
 </html>
